--- a/src/assets/i18n/hi.json
+++ b/src/assets/i18n/hi.json
@@ -1,11 +1,11 @@
 {
-    "Sitetitle": "कोणीय बहु भाषा साइट",
-    "Name": "नाम",
-    "NameError": "मुझे यकीन है कि आपके पास एक नाम होना चाहिए!",
-    "Email": "ईमेल",
-    "PhoneNo": "फोन नंबर",
-    "Password": "पासवर्ड",
-    "Bio": "अपने बारे में जैव",
-    "TermsConditions": "मैं नियमों और शर्तों से सहमत हूँ",
-    "Submit": "प्रस्तुत"
+	"Bio": "अपने बारे में जैव",
+	"Email": "ईमेल",
+	"Name": "नाम",
+	"NameError": "मुझे यकीन है कि आपके पास एक नाम होना चाहिए!",
+	"Password": "पासवर्ड",
+	"PhoneNo": "फोन नंबर",
+	"Sitetitle": "कोणीय बहु भाषा साइट",
+	"Submit": "प्रस्तुत",
+	"TermsConditions": "मैं नियमों और शर्तों से सहमत हूँ"
 }
