--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,11 +1,11 @@
 {
-    "Sitetitle": "Angular Multi Language Site",
-    "Name": "Name",
-    "NameError": "I am sure you must have a name!",
-    "Email": "Email address",
-    "PhoneNo": "Phone No",
-    "Password": "Password",
-    "Bio": "Enter bio",
-    "TermsConditions": "I agree to terms and conditions.",
-    "Submit": "Submit"
+	"Bio": "Enter bio",
+	"Email": "Email address",
+	"Name": "Name",
+	"NameError": "I am sure you must have a name!",
+	"Password": "Password",
+	"PhoneNo": "Phone No",
+	"Sitetitle": "Angular Multi Language Site",
+	"Submit": "Submit",
+	"TermsConditions": "I agree to terms and conditions."
 }
