--- a/src/assets/i18n/mr.json
+++ b/src/assets/i18n/mr.json
@@ -1,11 +1,11 @@
 {
-    "Sitetitle": "कोनीय मल्टी लँग्वेज साइट",
-    "Name": "नाव",
-    "NameError": "मला खात्री आहे की तुमचे नाव असले पाहिजे!",
-    "Email": "ईमेल",
-    "PhoneNo": "दूरध्वनी क्रमांक",
-    "Password": "पासवर्ड",
-    "Bio": "बायो एंटर करा",
-    "TermsConditions": "मी अटी व शर्ती मान्य करतो",
-    "Submit": "प्रस्तुत करणे"
+	"Bio": "बायो एंटर करा",
+	"Email": "ईमेल",
+	"Name": "नाव",
+	"NameError": "मला खात्री आहे की तुमचे नाव असले पाहिजे!",
+	"Password": "पासवर्ड",
+	"PhoneNo": "दूरध्वनी क्रमांक",
+	"Sitetitle": "कोनीय मल्टी लँग्वेज साइट",
+	"Submit": "प्रस्तुत करणे",
+	"TermsConditions": "मी अटी व शर्ती मान्य करतो"
 }
